# YATDA

./: .eslintrc.json  .gitignore  .prettierrc  LICENSE  README.md  package.json  tsconfig.json  vue.config.js
.github/workflows/: deploy.yml
back/: .flake8  .gitignore  dev.sh  prod.sh  pyproject.toml  run.sh  wsgi.py
back/yatda/: app.py  config.py.template
front/: .env.template  .eslintrc.json  .gitignore  .prettierrc  README.md  package.json  tsconfig.json
front/src/: App.vue  config.ts.template  utils.ts
front/src/components/: Header.vue  NewCardButton.vue  Subtask.vue  TaskCard.vue  types.ts
front/src/components/base/: BaseButton.vue  BaseCard.vue  BaseCheckbox.vue  BaseModal.vue  BaseSelect.vue  BaseTab.vue  BaseTextInput.vue
front/src/components/mixins/: DetectMobileMixin.js  KeygenMixin.js
front/src/icons/: CheckMark.vue  DownArrow.vue  PlusSign.vue  TaskIcon.vue
front/src/services/: localStorageService.ts  myFetch.ts  tasksService.ts
front/src/styles/: _variables.scss  globalStyles.scss
front/src/types/: Person.ts
front/src/views/: Tasks.vue
src/: App.vue  main.ts
src/components/: ProjectCard.vue
src/components/base/: BaseButton.vue  BaseCard.vue  BaseSelect.vue  BaseTextInput.vue
src/components/mixins/: DetectMobileMixin.ts
src/icons/: DownArrow.vue
src/styles/: _variables.scss
