[tool.poetry]
name = "yatda"
version = "0.1.0"
description = "Backend API for YATDA"
authors = ["Erwan de Lépinau <erwan@feedly.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 100