[tool.poetry]
name = "yatda"
version = "0.1.0"
description = "Backend API for YATDA"
authors = ["Erwan de Lépinau <erwan@feedly.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
